remove the id from wax and coverage demos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
   <body>
     <h4>Demos</h4>
     <ul>
-      <li><a href="/coverage/guest">coverage</a></li>
-      <li><a href="/wax/guest">wax</a></li>
+      <li><a href="/coverage">coverage</a></li>
+      <li><a href="/wax">wax</a></li>
     </ul>
   </body>
 </html>
