--- a/views/wax.ejs
+++ b/views/wax.ejs
@@ -13,6 +13,11 @@
 
     <script src="/dist/leaflet-src.js"></script>
     <script src="/dist/wax.leaf.js"></script>
+
+    <% if ( agent.indexOf( 'Mobile' ) > 0 ) {%>
+    <script src="/dist/cordova-2.3.0.js"></script>
+    <% } else { %>
+    <% } %>
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
