--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
     <ul>
       <li><a href="/coverage">coverage</a></li>
       <li><a href="/wax">wax</a></li>
+      <li><a href="/google">google</a></li>
+      <li><a href="/notification">notification</a></li>
     </ul>
   </body>
 </html>
