added conference page for later work on webrtc, update the server and view for new browserify url and start to add notifications demo

--- a/views/conference.ejs
+++ b/views/conference.ejs
@@ -39,15 +39,15 @@
     <body>
         <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
         <!--<script src="/dist/bundle.js"></script>-->
-        <script src="/browserify.js"></script>
+        <script src="/browserify"></script>
         <script>
-                    require('features');
-                    require('notifications');
-                    require('time');
+                    require('branding');
             var _ = require('underscore');
             var u = require('util');
             var $ = require('jquery');
             var i = io;
+        </script>
+        <script>
             //var i = require('socket.io-browserify');
 
 //            var m = 'http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256';
