--- a/views/coverage.ejs
+++ b/views/coverage.ejs
@@ -22,10 +22,9 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify.js"></script>
+    <script src="/browserify"></script>
     <script>
-              require( 'features' );
-              require( 'notifications' );
+              require( 'branding' );
               require( 'coverage' );
       var _ = require( 'underscore' );
       var u = require( 'util' );
