--- a/views/wax.ejs
+++ b/views/wax.ejs
@@ -21,10 +21,10 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify.js"></script>
+    <script src="/browserify"></script>
     <script>
               require( 'features' );
-              require( 'notifications' );
+              require( 'branding' );
       var _ = require( 'underscore' );
       var u = require( 'util' );
       var $ = require( 'jquery' );
