--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -19,85 +19,49 @@
     <% } %>
   </head>
   <body>
-    <div id="controls" style="display: none;">
-      <a id="notifications" href="#">notifications</a>
-    </div>
-    <div id="map" style="width:100%; height:100%"></div>
+    <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
     <script src="/browserify"></script>
     <script>
-              require('branding');
-              require('notifications');
-      var _ = require('underscore');
-      var u = require('util');
-      var $ = require('jquery');
-      var i = io;
+              require( 'branding' );
+              require( 'notifications' );
+      var _ = require( 'underscore' );
+      var u = require( 'util' );
+      var $ = require( 'jquery' );
+      var i = require( 'socket.io' );
     </script>
     <script>
-      /*
-       $('#notifications').live('click',
-       function(e) {
-       if (window.webkitNotifications.checkPermission() == 0) {
-       notification_test = window.webkitNotifications.createNotification('icon.png', 'Notification Title', 'Notification content...');
-       notification_test.ondisplay = function() { console.log(" displayed ") };
-       notification_test.onclose = function() { console.log(" closed ") };
-       notification_test.show();
-       } else {
-       window.webkitNotifications.requestPermission();
-       }
-       return false;
-       }
-       );
-       */
-      var mapOptions = {
-        center: new google.maps.LatLng( -36.7, 144.6 ),
-        zoom: 10,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
+
+      var b = "http://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile";
+      var c = "http://" + document.location.hostname + ":8888/";
+
+      var f = '/{z}/{x}/{y}.png';
+      var g = '/{z}/{y}/{x}.png';
+
+      var map = L.map( 'map', { attributionControl: false } )
+          .setView( [-37.8, 144.9], 7 );
+
+      L.control.scale( { imperial: false } ).addTo( map );
+
+      var underlays = {
+        "relief": L.tileLayer( c + 'relief' + f, { maxZoom: 18 } ).addTo( map )
       };
-      var info = new google.maps.InfoWindow();
-      var map = new google.maps.Map( document.getElementById( "map" ), mapOptions );
-      /*
-       var socket = io.connect('localhost:8080', {});
 
-       var toLatLon = function( pos ) {
-       return new google.maps.LatLng( pos.coords.latitude, pos.coords.longitude, false );
-       };
+      var overlays = {
+      };
 
-       $.ajax
+      L.control.layers( underlays, overlays ).addTo( map );
 
-       socket.on('connect', function () {
-       socket.on('update', function( json ) {
-       console.log( json );
-       var opts = {
-       strokeColor: "#FF3333",
-       strokeWeight: 2,
-       strokeOpacity: 0.9,
-       zoom: 17
-       };
+      var message = function(latlng) {
+        return "Position [" + latlng + "]";
+      }
 
-       googleVector = new GeoJSON(json, opts);
+      map.on( 'moveend', function ( e ) {
+        map.notification("New Position", message( e.target.getCenter() ),
+            function() {  },
+            function() {  }
+        );
+      } );
 
-       if (googleVector.error){
-       console.log( googleVector.error );
-       }else{
-       if (_.isArray( googleVector ) ) {
-       _.each( googleVector, function(vector) { vector.setMap(map) } );
-       } else {
-       googleVector.setMap(map);
-       }
-       }
-       });
-       setInterval(function() {
-       navigator.geolocation.getCurrentPosition(
-       function( pos ) {
-       socket.emit( "update", pos.coords );
-       },
-       function( err ) {
-       console.log( err );
-       }
-       );
-       }, 5000);
-       });
-       */
     </script>
   </body>
 </html>
