--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,9 @@
       <li><a href="/wax">wax</a></li>
       <li><a href="/google">google</a></li>
       <li><a href="/notification">notification</a></li>
+      <li><a href="/drawing">drawing</a></li>
+      <li><a href="/temporal">temporal</a></li>
+    </ul>
     </ul>
   </body>
 </html>
