divide into different views

--- a/views/following.ejs
+++ b/views/following.ejs
@@ -24,7 +24,7 @@
   <!--<script src="/dist/bundle.js"></script>-->
   <script src="/browserify"></script>
   <script>
-    require( 'branding' );
+    var b = require( 'branding' );
     var _ = require( 'underscore' );
     var u = require( 'util' );
     var $ = require( 'jquery' );
