--- a/views/drawing.ejs
+++ b/views/drawing.ejs
@@ -25,7 +25,7 @@
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
     <script src="/browserify"></script>
     <script>
-      require( 'branding' );
+      var b = require( 'branding' );
       var _ = require( 'underscore' );
       var u = require( 'util' );
       var $ = require( 'jquery' );
