--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -22,8 +22,8 @@
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
     <script src="/browserify"></script>
     <script>
-      require( 'branding' );
-      require( 'notifications' );
+      var b = require( 'branding' );
+      var n = require( 'notifications' );
       var _ = require( 'underscore' );
       var u = require( 'util' );
       var $ = require( 'jquery' );
