--- a/views/temporal.ejs
+++ b/views/temporal.ejs
@@ -35,37 +35,27 @@
       var a = "http://emap.dse.vic.gov.au/ArcGIS/rest/services/mapscape/MapServer/tile";
       var b = "http://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/";
 
-      //var d = "http://" + document.location.hostname + ":9090/ncwms/wms"
-      // ?request=GetMap
-      // &version=1.3.0
-      // &styles=
-      // &crs=CRS:84
-      // &width=256
-      // &height=256
-      // &format=image/png;mode=32bit
-      // &transparent=true
-      // &layers=2/T_SFC
       var c = "http://" + document.location.hostname + ":8888/";
-      var d = "http://" + document.location.hostname + ":9090/ncwms/wms";
+      var d = "http://" + document.location.hostname + ":9090/ncwms/wms?crs=CRS:84";
 
       var f = '/{z}/{x}/{y}.png';
       var g = '/{z}/{y}/{x}.png';
 
       var map = L.map( 'map', {
         attributionControl: false,
-        timeControl: true } )
-          .setView( [-37.8, 144.9], 7 );
+        timeControl: true
+      } ).setView( [-37.8, 144.9], 7 );
 
       var underlays = {
         "arcgis": L.tileLayer( b + g, { maxZoom: 18 } ).addTo( map )
       };
 
       var overlays = {
-        /*
         "ffdi": L.tileLayer.wms( d, {
           service: 'wms',
-          crs: 'CRS:84',
-          time: new Date( 2012, 11, 08 ).toISOString(),
+          //crs: 'CRS:84',
+          //time: '2013-03-08T18:00:00.000Z',
+          time: new Date( 2013, 04, 06 ).toISOString(),
           request: 'GetMap',
           version: '1.3.0',
           layers: '1/FFDI_SFC',
@@ -74,10 +64,9 @@
           format: 'image/png;mode=32bit',
           transparent: true
         } ).addTo( map ),
-        */
         "temp": L.tileLayer.wms( d, {
           service: 'wms',
-          crs: 'CRS:84',
+          //crs: 'CRS:84',
           //time: '2013-03-08T18:00:00.000Z',
           time: new Date( 2013, 04, 06 ).toISOString(),
           request: 'GetMap',
