--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,16 +7,20 @@
     <h4>Demos</h4>
     <ul>
       <li><a href="/availability">availability</a></li>
+      <li><a href="/baselayers">baselayers</a></li>
       <li><a href="/conference">conference</a></li>
       <li><a href="/coverage">coverage</a></li>
       <li><a href="/drawing">drawing</a></li>
-      <li><a href="/google">google</a></li>
       <li><a href="/following">following</a></li>
+      <li><a href="/google">google</a></li>
+      <li><a href="/hashing">hashing</a></li>
       <li><a href="/notification">notification</a></li>
       <li><a href="/regions">regions</a></li>
       <li><a href="/resources">resources</a></li>
+      <li><a href="/search">search</a></li>
       <li><a href="/temporal">temporal</a></li>
       <li><a href="/terrain">terrain</a></li>
+      <li><a href="/tracking">tracking</a></li>
       <li><a href="/wax">wax</a></li>
     </ul>
     </ul>
